JPA in progress
to do:
fix create, update
refacto controllers

--- a/src/main/webapp/messages/messages_fr.properties
+++ b/src/main/webapp/messages/messages_fr.properties
@@ -11,13 +11,13 @@ dashboard.edit.button=Editer
 dashboard.computerName=Nom Ordinateur
 dashboard.introduced=Date d'introduction
 dashboard.discontinued=Date de fin
-dashboard.company=Companie
+dashboard.company=Compagnie
 addComputer.title=Ajouter un Ordinateur
 editComputer.title=Editer Ordinateur
 form.input.name=Nom Ordinateur
 form.input.introduced=Date de parution
 form.input.discontinued=Date de fin
-form.input.company=Companie
+form.input.company=Compagnie
 form.button.add=Ajouter
 form.button.cancel=Retour
 form.button.edit=Editer
